--- a/sales.html
+++ b/sales.html
@@ -1,209 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sales - POS System</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0; padding: 0;
-      background: #f4f6f9;
-      color: #333;
-    }
-    header {
-      background: #001219;
-      color: white;
-      padding: 15px;
-      text-align: center;
-    }
-    nav {
-      display: flex;
-      justify-content: center;
-      gap: 15px;
-      margin: 10px 0;
-    }
-    nav a {
-      text-decoration: none;
-      background: #0077b6;
-      color: white;
-      padding: 10px 15px;
-      border-radius: 6px;
-    }
-    nav a:hover {
-      background: #023e8a;
-    }
-    .container {
-      max-width: 900px;
-      margin: 20px auto;
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    }
-    input, button, select {
-      padding: 10px;
-      margin: 5px 0;
-      width: 100%;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-    }
-    button {
-      background: #0077b6;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #023e8a;
-    }
-    table {
-      width: 100%;
-      margin-top: 15px;
-      border-collapse: collapse;
-    }
-    th, td {
-      border: 1px solid #ddd;
-      padding: 8px;
-      text-align: center;
-    }
-    th {
-      background: #0077b6;
-      color: white;
-    }
-    .total-box {
-      text-align: right;
-      margin-top: 15px;
-      font-size: 18px;
-      font-weight: bold;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Sales Checkout</title>
+<style>
+  body { font-family: Arial, sans-serif; margin:0; background:#f4f6f9; }
+  header { background:#001219; color:#fff; padding:15px; text-align:center; font-weight:bold; }
+  nav { display:flex; justify-content:center; gap:12px; margin:10px 0; }
+  nav a { text-decoration:none; background:#0077b6; color:white; padding:10px 15px; border-radius:6px; }
+  nav a:hover { background:#023e8a; }
+  .container { max-width:900px; margin:20px auto; padding:20px; background:#fff; border-radius:10px; box-shadow:0 2px 6px rgba(0,0,0,0.2); }
+  input, select, button { width:100%; padding:10px; margin:5px 0; border:1px solid #ccc; border-radius:6px; }
+  button { cursor:pointer; background:#0077b6; color:white; border:none; font-weight:bold; }
+  button:hover { background:#023e8a; }
+  table { width:100%; margin-top:15px; border-collapse:collapse; }
+  th, td { border:1px solid #ddd; padding:8px; text-align:center; }
+  th { background:#0077b6; color:white; }
+  .alert { padding:10px; margin-top:10px; border-radius:6px; font-weight:bold; }
+  .alert-warning { background:#fff3cd; color:#856404; }
+  .alert-danger { background:#f8d7da; color:#721c24; }
+  .grid-2 { display:grid; grid-template-columns: 2fr 1fr; gap:10px; }
+  @media(max-width:680px){ .grid-2 { grid-template-columns:1fr; } }
+</style>
 </head>
 <body>
-  <header>
-    <h1>Sales Page</h1>
-  </header>
-  <nav>
-    <a href="admin.html">Admin</a>
-    <a href="stock.html">Stock</a>
-    <a href="sales.html">Sales</a>
-  </nav>
 
-  <div class="container">
-    <h2>Checkout</h2>
+<header>💰 Sales Checkout</header>
 
-    <input type="text" id="barcodeInput" placeholder="Scan or Enter Barcode">
-    <button onclick="addToCart()">Add to Cart</button>
+<nav>
+  <a href="admin.html">Admin</a>
+  <a href="stock.html">Stock</a>
+  <a href="sales.html">Sales</a>
+</nav>
 
-    <table id="cartTable">
+<div class="container">
+  <h2>Sell Item</h2>
+  <div class="grid-2">
+    <div>
+      <label>Scan Barcode (USB scanner) or type manually</label>
+      <input id="barcodeInput" type="text" placeholder="Focus here and scan..." autocomplete="off">
+      <small>USB scanners usually submit Enter automatically</small>
+    </div>
+    <div>
+      <label>Quantity</label>
+      <input id="saleQty" type="number" min="1" value="1">
+    </div>
+  </div>
+  <button id="sellBtn">💵 Checkout</button>
+
+  <h2>Sales Records</h2>
+  <div id="alerts"></div>
+  <div style="overflow-x:auto;">
+    <table>
       <thead>
         <tr>
-          <th>Item</th>
           <th>Barcode</th>
-          <th>Price</th>
+          <th>Name</th>
           <th>Qty</th>
-          <th>Subtotal</th>
+          <th>Price (₦)</th>
+          <th>Total (₦)</th>
+          <th>Date</th>
         </tr>
       </thead>
-      <tbody></tbody>
+      <tbody id="salesTable"></tbody>
     </table>
-
-    <div class="total-box">
-      Total: ₦<span id="totalAmount">0</span>
-    </div>
-
-    <button onclick="checkout()">Checkout</button>
   </div>
+</div>
 
-  <script>
-    let db;
-    let cart = [];
+<script>
+let db;
+const request = indexedDB.open("StoreDB",1);
 
-    // Open IndexedDB
-    const request = indexedDB.open("StoreDB", 1);
+request.onupgradeneeded = e => {
+  db = e.target.result;
+  if(!db.objectStoreNames.contains("stock")){
+    db.createObjectStore("stock",{keyPath:"barcode"});
+  }
+  if(!db.objectStoreNames.contains("sales")){
+    db.createObjectStore("sales",{keyPath:"id", autoIncrement:true});
+  }
+};
 
-    request.onsuccess = function(e) {
-      db = e.target.result;
-      console.log("DB ready for Sales");
+request.onsuccess = e => {
+  db = e.target.result;
+  renderSales();
+};
+
+request.onerror = ()=>alert("DB error");
+
+// Format currency
+function formatN(n){ return Number(n||0).toLocaleString(undefined,{minimumFractionDigits:2,maximumFractionDigits:2}); }
+
+// Process Sale
+const barcodeInput = document.getElementById("barcodeInput");
+const saleQty = document.getElementById("saleQty");
+const sellBtn = document.getElementById("sellBtn");
+
+sellBtn.addEventListener("click", ()=>{ processSale(barcodeInput.value.trim(), parseInt(saleQty.value)||1); });
+
+barcodeInput.addEventListener("keypress", e=>{
+  if(e.key==="Enter"){
+    e.preventDefault();
+    processSale(barcodeInput.value.trim(), parseInt(saleQty.value)||1);
+  }
+});
+
+function processSale(code, qty){
+  if(!code){ alert("Enter or scan barcode"); return; }
+
+  const tx = db.transaction(["stock","sales"],"readwrite");
+  const stockStore = tx.objectStore("stock");
+  const salesStore = tx.objectStore("sales");
+
+  const getReq = stockStore.get(code);
+  getReq.onsuccess = function(){
+    const item = getReq.result;
+    if(!item){ alert("❌ Item not found"); return; }
+    if(item.qty<qty){ alert(`❌ Not enough stock. Available: ${item.qty}`); return; }
+
+    item.qty -= qty;
+    stockStore.put(item);
+
+    const saleRecord = {
+      barcode:item.barcode,
+      name:item.name,
+      qty:qty,
+      price:item.price,
+      total:item.price*qty,
+      date:new Date().toLocaleString()
     };
+    salesStore.add(saleRecord);
 
-    request.onerror = function() {
-      alert("Error opening database.");
-    };
+    renderSales();
+    barcodeInput.value="";
+    saleQty.value=1;
+    barcodeInput.focus();
 
-    function addToCart() {
-      const barcode = document.getElementById("barcodeInput").value.trim();
-      if (!barcode) {
-        alert("Please enter a barcode.");
-        return;
-      }
-
-      const tx = db.transaction("stock", "readonly");
-      const store = tx.objectStore("stock");
-      const req = store.get(barcode);
-
-      req.onsuccess = function(e) {
-        const item = e.target.result;
-        if (item) {
-          const existing = cart.find(c => c.barcode === barcode);
-          if (existing) {
-            existing.qty++;
-          } else {
-            cart.push({ name: item.name, price: item.price, barcode: item.barcode, qty: 1 });
-          }
-          renderCart();
-        } else {
-          alert("Item not found in stock.");
-        }
-      };
+    if(item.qty<=5){
+      alert(`⚠ Low stock: ${item.name} only ${item.qty} left!`);
+    } else {
+      console.log(`Sold ${qty} x ${item.name} (₦${formatN(qty*item.price)})`);
     }
+  };
+}
 
-    function renderCart() {
-      const tbody = document.querySelector("#cartTable tbody");
-      tbody.innerHTML = "";
-      let total = 0;
+function renderSales(){
+  const tbody=document.getElementById("salesTable");
+  tbody.innerHTML="";
+  const alertsDiv = document.getElementById("alerts");
+  alertsDiv.innerHTML="";
 
-      cart.forEach(c => {
-        const subtotal = c.price * c.qty;
-        total += subtotal;
-        tbody.innerHTML += `
-          <tr>
-            <td>${c.name}</td>
-            <td>${c.barcode}</td>
-            <td>₦${c.price}</td>
-            <td>${c.qty}</td>
-            <td>₦${subtotal}</td>
-          </tr>
-        `;
-      });
+  const tx = db.transaction(["sales","stock"],"readonly");
+  const salesStore = tx.objectStore("sales");
+  const stockStore = tx.objectStore("stock");
 
-      document.getElementById("totalAmount").innerText = total;
+  salesStore.openCursor().onsuccess = e=>{
+    const cursor = e.target.result;
+    if(cursor){
+      const s = cursor.value;
+      const tr=document.createElement("tr");
+      tr.innerHTML=`<td>${s.barcode}</td><td>${s.name}</td><td>${s.qty}</td><td>₦${formatN(s.price)}</td><td>₦${formatN(s.total)}</td><td>${s.date}</td>`;
+      tbody.appendChild(tr);
+      cursor.continue();
     }
-
-    function checkout() {
-      if (cart.length === 0) {
-        alert("Cart is empty.");
-        return;
-      }
-
-      const tx = db.transaction("sales", "readwrite");
-      const store = tx.objectStore("sales");
-
-      const sale = {
-        id: Date.now(),
-        date: new Date().toISOString(),
-        items: cart,
-        total: document.getElementById("totalAmount").innerText
-      };
-
-      store.add(sale);
-
-      tx.oncomplete = function() {
-        alert("Sale saved successfully!");
-        cart = [];
-        renderCart();
-      };
-    }
-  </script>
+  };
+}
+</script>
 </body>
 </html>
