--- a/stock.html
+++ b/stock.html
@@ -20,6 +20,26 @@ table{width:100%;border-collapse:collapse;margin-top:12px;font-size:0.95rem;}
 th,td{border:1px solid #ddd;padding:8px;text-align:center;}
 th{background:#0077b6;color:#fff;}
 .alert-low{background:#fff3cd;color:#7a5d00;padding:8px 12px;border-radius:6px;margin-bottom:6px;font-weight:bold;}
+
+  /* Spinner inside button */
+.spinner {
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  border: 3px solid rgba(255,255,255,0.3);
+  border-top: 3px solid #fff;
+  border-radius: 50%;
+  animation: spin 0.8s linear infinite;
+  margin-left: 8px;
+  vertical-align: middle;
+}
+
+.hidden { display: none; }
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
 </style>
 </head>
 <body>
@@ -35,7 +55,14 @@ th{background:#0077b6;color:#fff;}
     <input type="number" id="itemQty" placeholder="Quantity" min="1">
     <input type="number" id="itemPrice" placeholder="Price (₦)" min="1" step="0.01">
   </div>
-  <button class="btn-add" id="addStockBtn">Add Stock</button>
+<!--  <button class="btn-add" id="addStockBtn">Add Stock</button>-->
+<div class="grid" style="grid-column: 1 / -1; position:relative;">
+  <button id="addStockBtn" class="btn-primary" type="submit">
+    <span id="btnText">➕ Add Item</span>
+    <span id="btnSpinner" class="spinner hidden"></span>
+  </button>
+</div>
+  
 </div>
 
 <div class="panel">
@@ -58,6 +85,120 @@ th{background:#0077b6;color:#fff;}
 
 </div>
 
+<script>
+// --- IndexedDB setup ---
+let db;
+const request = indexedDB.open("StoreDB", 1);
+request.onupgradeneeded = e => {
+  db = e.target.result;
+  if (!db.objectStoreNames.contains("stock")) db.createObjectStore("stock", { keyPath: "barcode" });
+  if (!db.objectStoreNames.contains("sales")) db.createObjectStore("sales", { autoIncrement: true });
+};
+request.onsuccess = e => { db = e.target.result; renderStock(); };
+request.onerror = () => alert("DB error");
+
+// --- Generate 8-character barcode ---
+function generateBarcode() {
+  const chars = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789';
+  let b = '';
+  for (let i = 0; i < 8; i++) b += chars.charAt(Math.floor(Math.random() * chars.length));
+  return b;
+}
+
+// --- Elements ---
+const addStockBtn = document.getElementById("addStockBtn");
+const itemName = document.getElementById("itemName");
+const itemCategory = document.getElementById("itemCategory");
+const itemQty = document.getElementById("itemQty");
+const itemPrice = document.getElementById("itemPrice");
+
+// --- Spinner & Button Text ---
+const btnText = document.createElement("span");
+btnText.textContent = "➕ Add Item";
+addStockBtn.innerHTML = '';
+addStockBtn.appendChild(btnText);
+
+const btnSpinner = document.createElement("span");
+btnSpinner.className = "spinner hidden";
+addStockBtn.appendChild(btnSpinner);
+
+// --- Add Stock ---
+addStockBtn.addEventListener("click", () => {
+  const name = itemName.value.trim();
+  const category = itemCategory.value.trim();
+  const qty = parseInt(itemQty.value);
+  const price = parseFloat(itemPrice.value);
+
+  if (!name || !category || !qty || !price) { alert("❌ Please fill all fields"); return; }
+
+  // Disable button & show spinner
+  addStockBtn.disabled = true;
+  btnText.textContent = "Adding...";
+  btnSpinner.classList.remove("hidden");
+
+  const barcode = generateBarcode();
+  const tx = db.transaction("stock", "readwrite").objectStore("stock");
+  tx.add({ barcode, name, category, qty, price });
+
+  tx.oncomplete = () => {
+    renderStock();
+
+    // Show success popup modal
+    setTimeout(() => {
+      if (confirm(`✅ Stock added successfully!\nItem: ${name}\nBarcode: ${barcode}`)) {
+        // Reset form
+        itemName.value = "";
+        itemCategory.value = "";
+        itemQty.value = "";
+        itemPrice.value = "";
+        // Enable button
+        addStockBtn.disabled = false;
+        btnText.textContent = "➕ Add Item";
+        btnSpinner.classList.add("hidden");
+        itemName.focus();
+      }
+    }, 300);
+  };
+
+  tx.onerror = () => {
+    alert("❌ Item already exists or DB error");
+    addStockBtn.disabled = false;
+    btnText.textContent = "➕ Add Item";
+    btnSpinner.classList.add("hidden");
+  };
+});
+
+// --- Render Stock ---
+function renderStock() {
+  const tbody = document.getElementById("stockTable");
+  const alerts = document.getElementById("lowStockAlerts");
+  tbody.innerHTML = "";
+  alerts.innerHTML = "";
+
+  const tx = db.transaction("stock", "readonly").objectStore("stock");
+  tx.openCursor().onsuccess = e => {
+    const cursor = e.target.result;
+    if (cursor) {
+      const i = cursor.value;
+      const tr = document.createElement("tr");
+      tr.innerHTML = `<td>${i.name}</td><td>${i.category}</td><td>${i.qty}</td><td>₦${i.price.toFixed(2)}</td>`;
+      tbody.appendChild(tr);
+
+      if (i.qty <= 5) {
+        const div = document.createElement("div");
+        div.className = "alert-low";
+        div.textContent = `⚠ Low stock: ${i.name} (Qty: ${i.qty})`;
+        alerts.appendChild(div);
+      }
+
+      cursor.continue();
+    }
+  };
+}
+</script>
+
+
+ <!-- 
 <script>
 let db;
 const request=indexedDB.open("StoreDB",1);
@@ -114,6 +255,6 @@ function renderStock(){
   };
 }
 </script>
-
+-->
 </body>
 </html>
