--- a/stock.html
+++ b/stock.html
@@ -40,6 +40,66 @@ th{background:#0077b6;color:#fff;}
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+/* Base */
+body{margin:0;font-family:'Segoe UI',Arial,sans-serif;background:#f4f6f9;color:#222;position:relative;}
+
+/* Reusable Water Transparent Modal */
+#loginModal{
+  position:fixed; inset:0;
+  background:rgba(0,0,0,0.3);
+  display:flex; justify-content:center; align-items:center;
+  z-index:9999;
+}
+#loginModal .modal-content{
+  background:#fff;padding:40px;border-radius:16px;
+  width:360px;text-align:center;
+  box-shadow:0 8px 24px rgba(0,0,0,0.3);
+  position:relative;
+}
+#loginModal h3{margin-bottom:20px;color:#001219;}
+#loginModal input{width:100%;padding:14px;margin:10px 0;border-radius:8px;border:1px solid #ccc;font-size:1rem;}
+#loginModal button{
+  width:100%; padding:12px; margin-top:15px; border:none; border-radius:50px; font-weight:700; cursor:pointer; font-size:1rem;
+}
+#loginModal .btn-login{background:#0a9396;color:#fff;}
+#loginModal .btn-login:hover{background:#007f89;}
+#loginMsg{margin-top:10px;color:red;font-weight:600;}
+
+/* Spinner */
+#spinnerOverlay{
+  position:fixed; inset:0; background:rgba(0,0,0,0.5);
+  display:flex; justify-content:center; align-items:center;
+  z-index:10000; display:none;
+}
+.spinner-loop {
+  width:100px; height:100px; border-radius:50%; border:6px solid transparent;
+  border-top:6px solid red;
+  border-right:6px solid green;
+  border-bottom:6px solid blue;
+  border-left:6px solid yellow;
+  animation:spin 1s linear infinite;
+  display:flex; justify-content:center; align-items:center;
+}
+.spinner-loop img{width:50px;height:50px; animation:spinReverse 1s linear infinite;}
+@keyframes spin{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
+@keyframes spinReverse{0%{transform:rotate(0deg);}100%{transform:rotate(-360deg);}}
+
+#logoutBtn{
+  position:fixed; top:20px; right:20px;
+  background:#ff5252; color:#fff; border:none; border-radius:50px;
+  width:50px; height:50px; display:flex; justify-content:center; align-items:center;
+  cursor:pointer; z-index:9999; transition:transform 0.3s;
+}
+#logoutBtn:hover{transform:scale(1.2);}
+#logoutBtn .tooltip{
+  visibility:hidden; position:absolute; top:-28px; background:#ff5252; color:#fff;
+  padding:4px 8px; border-radius:6px; font-size:0.8rem; white-space:nowrap;
+}
+#logoutBtn.showTooltip .tooltip{visibility:visible; animation:zoom 0.6s ease-in-out infinite;}
+@keyframes zoom{0%,100%{transform:scale(1);}50%{transform:scale(1.3);}}
+
+
+  
 </style>
 </head>
 <body>
@@ -97,7 +157,7 @@ th{background:#0077b6;color:#fff;}
 
 <!-- Spinner Overlay -->
 <div id="spinnerOverlay">
-  <div class="spinner">
+  <div class="spinner-loop">
     <img src="logo.png" alt="Logo">
   </div>
 </div>
