--- a/stock.html
+++ b/stock.html
@@ -84,8 +84,8 @@ th{background:#0077b6;color:#fff;}
 @keyframes spinReverse{0%{transform:rotate(0deg);}100%{transform:rotate(-360deg);}}
 
 #logoutBtn{
-  position:fixed; top:20px; right:20px;
-  background:#ff5252; color:#fff; border:none; border-radius:50px;
+  position:fixed; top:70px; right:20px;
+  background:#ff5252; color:#fff; border:none; border-radius:25px 0 0 25px; padding:8px 15px 8px 5px;
   width:50px; height:50px; display:flex; justify-content:center; align-items:center;
   cursor:pointer; z-index:9999; transition:transform 0.3s;
 }
