--- a/sales.html
+++ b/sales.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Sales</title>
 <style>
@@ -130,7 +131,13 @@ th{background:#0077b6;color:#fff;}
   <span class="tooltip">Logout</span>
   ⏻
 </button>
+  <!--
+<button id="logoutBtn" class="logout-btn" title="Logout">
+  <i class="fas fa-power-off"></i>
+</button>
+-->
 
+  
 
   
 <script>
