--- a/stock.html
+++ b/stock.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Stock Management</title>
 <style>
@@ -164,9 +165,8 @@ th{background:#0077b6;color:#fff;}
 <!-- Logout Button -->
 <button id="logoutBtn">
   <span class="tooltip">Logout</span>
-  ⏻
+  <i class="fas fa-power-off"></i>
 </button>
-
   
 <script>
 // --- IndexedDB setup ---
